[package]
name = "tynkerbase-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tynkerbase_universal = { git = "https://github.com/akneni/tynkerbase-universal.git", branch = "master"}
mongodb = "2.8.2"
rand = "0.8.5"
rocket = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shuttle-rocket = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = "1.26.0"
