[package]
name = "tynkerbase-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tynkerbase_universal = { git = "https://github.com/akneni/tynkerbase-universal.git", branch = "master"}
rocket = "0.5.0"
mongodb = "3.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shuttle-rocket = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = "1.26.0"
futures = "0.3.30"
bincode = "1.3.3"
once_cell = "1.19.0"
dashmap = "6.0.1"
reqwest = "0.12.5"
anyhow = "1.0.86"
